<resources>
    <string name="app_name">Plandora</string>

    <!--- sign in/sign out -->
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">Sign out</string>
    <string name="unique_username">Name</string>
    <string name="display_name">Display name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>

    <!--- dashboard -->
    <string name="dashboard_display_name">Dashboard</string>
    <string name="dashboard_toolbar_title">Upcoming Events</string>
    <string name="dashboard_search_title">Search</string>
    <string name="event_item_icon_description">Event Icon</string>
    <string name="remaining_days_template">In {time} days</string>

    <!--- notifications -->
    <string name="notifications_display_name">Notifications</string>
    <string name="notifications_toolbar_title">Notifications</string>

    <!--- profile -->
    <string name="profile_display_name">Profile</string>
    <string name="profile_toolbar_title">Profile</string>

    <!-- events -->
    <string name="event_time_display">%1$s : %2$s</string>
    <string name="event_date_display">%1$s-%2$s-%3$s</string>

    <!--- string values for specific activities -->
    <string name="sign_in_description_text">Please enter your login credentials</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="create_event_empty_title">Please specify a title</string>
    <string name="create_event_in_the_past">This one-time event is in the past</string>
    <string name="create_event_success">Successfully created event</string>

    <string name="update_event_success">Successfully updated event</string>

    <string name="empty_unique_name">Unique name must not be empty</string>
    <string name="empty_display_name">Display name must not be empty</string>
    <string name="empty_email">Email must not be empty</string>
    <string name="empty_password">Password must not be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="sign_up_valid_form">Valid input</string>

</resources>